ACLOCAL_AMFLAGS = -I ../m4

bin_PROGRAMS = xapiand

xapiand_SOURCES = \
	cartesian.cc \
	cJSON.c \
	cJSON_Utils.c \
	client_base.cc \
	client_binary.cc \
	client_http.cc \
	database.cc \
	database_autocommit.cc \
	database_utils.cc \
	datetime.cc \
	endpoint.cc \
	endpoint_resolver.cc \
	ev/ev.c \
	ev/event.c	 \
	exception.cc \
	fields.cc \
	generate_terms.cc \
	geometry.cc \
	geospatialrange.cc \
	hash/md5.cc \
	hash/sha256.cc \
	haystack.cc \
	htm.cc \
	http_parser.c \
	io_utils.cc \
	length.cc \
	log.cc \
	lz4/lz4.c \
	lz4/lz4frame.c \
	lz4/lz4hc.c \
	lz4/xxhash.c \
	manager.cc \
	msgpack_wrapper.cc \
	multivalue.cc \
	multivaluekeymaker.cc \
	multivaluerange.cc \
	namegen.cc \
	replicator.cc \
	schema.cc \
	serialise.cc \
	servers/binary.cc \
	servers/discovery.cc \
	servers/http.cc \
	servers/raft.cc \
	servers/server.cc \
	servers/server_base.cc \
	servers/server_binary.cc \
	servers/server_discovery.cc \
	servers/server_http.cc \
	servers/server_raft.cc \
	servers/tcp_base.cc \
	servers/udp_base.cc \
	times.cc \
	utils.cc \
	wkt_parser.cc \
	xapiand.cc \
	xchange/convert.cc

noinst_HEADERS = \
	cartesian.h \
	cJSON.h \
	cJSON_Utils.h \
	client_base.h \
	client_binary.h \
	client_http.h \
	compressor.h \
	database.h \
	database_autocommit.h \
	database_utils.h \
	datetime.h \
	endpoint.h \
	endpoint_resolver.h \
	ev/ev_vars.h \
	ev/ev_wrap.h \
	ev/ev.h \
	ev/ev++.h \
	ev/event.h	 \
	ev/ev_epoll.c \
	ev/ev_kqueue.c \
	ev/ev_poll.c \
	ev/ev_port.c \
	ev/ev_select.c \
	ev/ev_win32.c \
	exception.h \
	fields.h \
	forward_list.h \
	generate_terms.h \
	geometry.h \
	geospatialrange.h \
	hash/md5.h \
	hash/sha256.h \
	haystack.h \
	htm.h \
	http_parser.h \
	io_utils.h \
	length.h \
	log.h \
	lru.h \
	lz4/lz4.h \
	lz4/lz4frame_static.h \
	lz4/lz4frame.h \
	lz4/lz4hc.h \
	lz4/xxhash.h \
	manager.h \
	msgpack_wrapper.h \
	multivalue.h \
	multivaluekeymaker.h \
	multivaluerange.h \
	namegen.h \
	queue.h \
	rapidjson/error/en.h \
	rapidjson/error/error.h \
	rapidjson/internal/biginteger.h \
	rapidjson/internal/diyfp.h \
	rapidjson/internal/dtoa.h \
	rapidjson/internal/ieee754.h \
	rapidjson/internal/itoa.h \
	rapidjson/internal/meta.h \
	rapidjson/internal/pow10.h \
	rapidjson/internal/stack.h \
	rapidjson/internal/strfunc.h \
	rapidjson/internal/strtod.h \
	rapidjson/internal/swap.h \
	rapidjson/msinttypes/inttypes.h \
	rapidjson/msinttypes/stdint.h \
	rapidjson/allocators.h \
	rapidjson/document.h \
	rapidjson/encodedstream.h \
	rapidjson/encodings.h \
	rapidjson/filereadstream.h \
	rapidjson/filewritestream.h \
	rapidjson/memorybuffer.h \
	rapidjson/memorystream.h \
	rapidjson/pointer.h \
	rapidjson/prettywriter.h \
	rapidjson/rapidjson.h \
	rapidjson/reader.h \
	rapidjson/stringbuffer.h \
	rapidjson/writer.h \
	replicator.h \
	schema.h \
	serialise.h \
	servers/binary.h \
	servers/discovery.h \
	servers/http.h \
	servers/raft.h \
	servers/server.h \
	servers/server_base.h \
	servers/server_binary.h \
	servers/server_discovery.h \
	servers/server_http.h \
	servers/server_raft.h \
	servers/tcp_base.h \
	servers/udp_base.h \
	sparsehash/dense_hash_map \
	sparsehash/dense_hash_set \
	sparsehash/internal \
	sparsehash/internal/densehashtable.h \
	sparsehash/internal/hashtable-common.h \
	sparsehash/internal/libc_allocator_with_realloc.h \
	sparsehash/internal/sparsehashtable.h \
	sparsehash/sparse_hash_map \
	sparsehash/sparse_hash_set \
	sparsehash/sparsetable \
	sparsehash/template_util.h \
	sparsehash/type_traits.h \
	tclap/Arg.h \
	tclap/ArgException.h \
	tclap/ArgTraits.h \
	tclap/CmdLine.h \
	tclap/CmdLineInterface.h \
	tclap/CmdLineOutput.h \
	tclap/Constraint.h \
	tclap/DocBookOutput.h \
	tclap/HelpVisitor.h \
	tclap/IgnoreRestVisitor.h \
	tclap/MultiArg.h \
	tclap/MultiSwitchArg.h \
	tclap/OptionalUnlabeledTracker.h \
	tclap/StandardTraits.h \
	tclap/StdOutput.h \
	tclap/SwitchArg.h \
	tclap/UnlabeledMultiArg.h \
	tclap/UnlabeledValueArg.h \
	tclap/ValueArg.h \
	tclap/ValuesConstraint.h \
	tclap/VersionVisitor.h \
	tclap/Visitor.h \
	tclap/XorHandler.h \
	tclap/ZshCompletionOutput.h \
	threadpool.h \
	times.h \
	utils.h \
	wkt_parser.h \
	worker.h \
	xapiand.h \
	xchange/convert.h \
	xchange/rapidjson.hpp


noinst_HEADERS += \
	msgpack/sysdep.h \
	msgpack/predef.h \
	msgpack/predef/make.h \
	msgpack/predef/platform.h \
	msgpack/predef/other.h \
	msgpack/predef/platform/windows_phone.h \
	msgpack/predef/platform/windows_desktop.h \
	msgpack/predef/platform/mingw.h \
	msgpack/predef/platform/windows_store.h \
	msgpack/predef/platform/windows_runtime.h \
	msgpack/predef/architecture/x86.h \
	msgpack/predef/architecture/arm.h \
	msgpack/predef/architecture/convex.h \
	msgpack/predef/architecture/parisc.h \
	msgpack/predef/architecture/sys390.h \
	msgpack/predef/architecture/x86/32.h \
	msgpack/predef/architecture/x86/64.h \
	msgpack/predef/architecture/m68k.h \
	msgpack/predef/architecture/sys370.h \
	msgpack/predef/architecture/rs6k.h \
	msgpack/predef/architecture/mips.h \
	msgpack/predef/architecture/pyramid.h \
	msgpack/predef/architecture/alpha.h \
	msgpack/predef/architecture/superh.h \
	msgpack/predef/architecture/z.h \
	msgpack/predef/architecture/blackfin.h \
	msgpack/predef/architecture/sparc.h \
	msgpack/predef/architecture/ppc.h \
	msgpack/predef/architecture/ia64.h \
	msgpack/predef/other/endian.h \
	msgpack/predef/language/objc.h \
	msgpack/predef/language/stdcpp.h \
	msgpack/predef/language/stdc.h \
	msgpack/predef/detail/endian_compat.h \
	msgpack/predef/detail/comp_detected.h \
	msgpack/predef/detail/platform_detected.h \
	msgpack/predef/detail/os_detected.h \
	msgpack/predef/detail/test.h \
	msgpack/predef/detail/_exception.h \
	msgpack/predef/detail/_cassert.h \
	msgpack/predef/version_number.h \
	msgpack/predef/compiler.h \
	msgpack/predef/compiler/borland.h \
	msgpack/predef/compiler/kai.h \
	msgpack/predef/compiler/hp_acc.h \
	msgpack/predef/compiler/ibm.h \
	msgpack/predef/compiler/sgi_mipspro.h \
	msgpack/predef/compiler/digitalmars.h \
	msgpack/predef/compiler/llvm.h \
	msgpack/predef/compiler/sunpro.h \
	msgpack/predef/compiler/watcom.h \
	msgpack/predef/compiler/comeau.h \
	msgpack/predef/compiler/edg.h \
	msgpack/predef/compiler/pgi.h \
	msgpack/predef/compiler/microtec.h \
	msgpack/predef/compiler/metaware.h \
	msgpack/predef/compiler/palm.h \
	msgpack/predef/compiler/iar.h \
	msgpack/predef/compiler/intel.h \
	msgpack/predef/compiler/clang.h \
	msgpack/predef/compiler/visualc.h \
	msgpack/predef/compiler/ekopath.h \
	msgpack/predef/compiler/gcc_xml.h \
	msgpack/predef/compiler/compaq.h \
	msgpack/predef/compiler/dignus.h \
	msgpack/predef/compiler/tendra.h \
	msgpack/predef/compiler/greenhills.h \
	msgpack/predef/compiler/mpw.h \
	msgpack/predef/compiler/metrowerks.h \
	msgpack/predef/compiler/diab.h \
	msgpack/predef/compiler/gcc.h \
	msgpack/predef/os/unix.h \
	msgpack/predef/os/bsd.h \
	msgpack/predef/os/solaris.h \
	msgpack/predef/os/windows.h \
	msgpack/predef/os/hpux.h \
	msgpack/predef/os/macos.h \
	msgpack/predef/os/os400.h \
	msgpack/predef/os/beos.h \
	msgpack/predef/os/aix.h \
	msgpack/predef/os/bsd/dragonfly.h \
	msgpack/predef/os/bsd/net.h \
	msgpack/predef/os/bsd/free.h \
	msgpack/predef/os/bsd/bsdi.h \
	msgpack/predef/os/bsd/open.h \
	msgpack/predef/os/cygwin.h \
	msgpack/predef/os/irix.h \
	msgpack/predef/os/ios.h \
	msgpack/predef/os/amigaos.h \
	msgpack/predef/os/vms.h \
	msgpack/predef/os/linux.h \
	msgpack/predef/os/qnxnto.h \
	msgpack/predef/os/haiku.h \
	msgpack/predef/os/android.h \
	msgpack/predef/architecture.h \
	msgpack/predef/os.h \
	msgpack/predef/library.h \
	msgpack/predef/version.h \
	msgpack/predef/language.h \
	msgpack/predef/library/c/_prefix.h \
	msgpack/predef/library/c/uc.h \
	msgpack/predef/library/c/gnu.h \
	msgpack/predef/library/c/vms.h \
	msgpack/predef/library/c/zos.h \
	msgpack/predef/library/c.h \
	msgpack/predef/library/std/_prefix.h \
	msgpack/predef/library/std/cxx.h \
	msgpack/predef/library/std/sgi.h \
	msgpack/predef/library/std/libcomo.h \
	msgpack/predef/library/std/stdcpp3.h \
	msgpack/predef/library/std/vacpp.h \
	msgpack/predef/library/std/stlport.h \
	msgpack/predef/library/std/dinkumware.h \
	msgpack/predef/library/std/msl.h \
	msgpack/predef/library/std/roguewave.h \
	msgpack/predef/library/std/modena.h \
	msgpack/predef/library/std.h


noinst_HEADERS += \
	msgpack.hpp \
	msgpack/adaptor/adaptor_base.hpp \
	msgpack/adaptor/array_ref.hpp \
	msgpack/adaptor/bool.hpp \
	msgpack/adaptor/boost/fusion.hpp \
	msgpack/adaptor/boost/msgpack_variant.hpp \
	msgpack/adaptor/boost/optional.hpp \
	msgpack/adaptor/boost/string_ref.hpp \
	msgpack/adaptor/char_ptr.hpp \
	msgpack/adaptor/check_container_size.hpp \
	msgpack/adaptor/cpp11/array.hpp \
	msgpack/adaptor/cpp11/array_char.hpp \
	msgpack/adaptor/cpp11/array_unsigned_char.hpp \
	msgpack/adaptor/cpp11/forward_list.hpp \
	msgpack/adaptor/cpp11/reference_wrapper.hpp \
	msgpack/adaptor/cpp11/shared_ptr.hpp \
	msgpack/adaptor/cpp11/tuple.hpp \
	msgpack/adaptor/cpp11/unique_ptr.hpp \
	msgpack/adaptor/cpp11/unordered_map.hpp \
	msgpack/adaptor/cpp11/unordered_set.hpp \
	msgpack/adaptor/define.hpp \
	msgpack/adaptor/deque.hpp \
	msgpack/adaptor/detail/cpp03_define_map.hpp \
	msgpack/adaptor/detail/cpp03_define_array.hpp \
	msgpack/adaptor/detail/cpp03_msgpack_tuple.hpp \
	msgpack/adaptor/detail/cpp11_define_array.hpp \
	msgpack/adaptor/detail/cpp11_define_map.hpp \
	msgpack/adaptor/detail/cpp11_msgpack_tuple.hpp \
	msgpack/adaptor/ext.hpp \
	msgpack/adaptor/fixint.hpp \
	msgpack/adaptor/float.hpp \
	msgpack/adaptor/int.hpp \
	msgpack/adaptor/list.hpp \
	msgpack/adaptor/map.hpp \
	msgpack/adaptor/msgpack_tuple.hpp \
	msgpack/adaptor/nil.hpp \
	msgpack/adaptor/pair.hpp \
	msgpack/adaptor/raw.hpp \
	msgpack/adaptor/v4raw.hpp \
	msgpack/adaptor/set.hpp \
	msgpack/adaptor/string.hpp \
	msgpack/adaptor/tr1/unordered_map.hpp \
	msgpack/adaptor/tr1/unordered_set.hpp \
	msgpack/adaptor/vector.hpp \
	msgpack/adaptor/vector_bool.hpp \
	msgpack/adaptor/vector_char.hpp \
	msgpack/adaptor/vector_unsigned_char.hpp \
	msgpack/unpack_define.h \
	msgpack/object_define.h \
	msgpack/gcc_atomic.h \
	msgpack/gcc_atomic.hpp \
	msgpack/cpp_config.hpp \
	msgpack/detail/cpp03_zone.hpp \
	msgpack/detail/cpp11_zone.hpp \
	msgpack/fbuffer.hpp \
	msgpack/iterator.hpp \
	msgpack/meta.hpp \
	msgpack/object.hpp \
	msgpack/object_fwd.hpp \
	msgpack/pack.hpp \
	msgpack/sbuffer.hpp \
	msgpack/type.hpp \
	msgpack/unpack.hpp \
	msgpack/version.hpp \
	msgpack/version_master.h \
	msgpack/versioning.hpp \
	msgpack/vrefbuffer.hpp \
	msgpack/zbuffer.hpp \
	msgpack/zone.hpp

noinst_HEADERS += \
	msgpack/preprocessor.hpp \
	msgpack/preprocessor/dec.hpp \
	msgpack/preprocessor/slot.hpp \
	msgpack/preprocessor/wstringize.hpp \
	msgpack/preprocessor/enum_params_with_defaults.hpp \
	msgpack/preprocessor/enum.hpp \
	msgpack/preprocessor/facilities.hpp \
	msgpack/preprocessor/enum_params_with_a_default.hpp \
	msgpack/preprocessor/assert_msg.hpp \
	msgpack/preprocessor/if.hpp \
	msgpack/preprocessor/variadic.hpp \
	msgpack/preprocessor/tuple.hpp \
	msgpack/preprocessor/comma_if.hpp \
	msgpack/preprocessor/identity.hpp \
	msgpack/preprocessor/repeat_from_to.hpp \
	msgpack/preprocessor/arithmetic/dec.hpp \
	msgpack/preprocessor/arithmetic/mod.hpp \
	msgpack/preprocessor/arithmetic/inc.hpp \
	msgpack/preprocessor/arithmetic/mul.hpp \
	msgpack/preprocessor/arithmetic/detail/div_base.hpp \
	msgpack/preprocessor/arithmetic/div.hpp \
	msgpack/preprocessor/arithmetic/sub.hpp \
	msgpack/preprocessor/arithmetic/add.hpp \
	msgpack/preprocessor/selection.hpp \
	msgpack/preprocessor/stringize.hpp \
	msgpack/preprocessor/seq/enum.hpp \
	msgpack/preprocessor/seq/pop_back.hpp \
	msgpack/preprocessor/seq/elem.hpp \
	msgpack/preprocessor/seq/subseq.hpp \
	msgpack/preprocessor/seq/to_tuple.hpp \
	msgpack/preprocessor/seq/for_each_i.hpp \
	msgpack/preprocessor/seq/to_list.hpp \
	msgpack/preprocessor/seq/size.hpp \
	msgpack/preprocessor/seq/replace.hpp \
	msgpack/preprocessor/seq/push_front.hpp \
	msgpack/preprocessor/seq/variadic_seq_to_seq.hpp \
	msgpack/preprocessor/seq/to_array.hpp \
	msgpack/preprocessor/seq/seq.hpp \
	msgpack/preprocessor/seq/fold_left.hpp \
	msgpack/preprocessor/seq/detail/split.hpp \
	msgpack/preprocessor/seq/detail/binary_transform.hpp \
	msgpack/preprocessor/seq/push_back.hpp \
	msgpack/preprocessor/seq/first_n.hpp \
	msgpack/preprocessor/seq/for_each.hpp \
	msgpack/preprocessor/seq/pop_front.hpp \
	msgpack/preprocessor/seq/fold_right.hpp \
	msgpack/preprocessor/seq/for_each_product.hpp \
	msgpack/preprocessor/seq/insert.hpp \
	msgpack/preprocessor/seq/cat.hpp \
	msgpack/preprocessor/seq/rest_n.hpp \
	msgpack/preprocessor/seq/remove.hpp \
	msgpack/preprocessor/seq/transform.hpp \
	msgpack/preprocessor/seq/reverse.hpp \
	msgpack/preprocessor/seq/filter.hpp \
	msgpack/preprocessor/max.hpp \
	msgpack/preprocessor/repeat_from_to_2nd.hpp \
	msgpack/preprocessor/repetition/enum_trailing_binary_params.hpp \
	msgpack/preprocessor/repetition/enum_params_with_defaults.hpp \
	msgpack/preprocessor/repetition/enum.hpp \
	msgpack/preprocessor/repetition/enum_params_with_a_default.hpp \
	msgpack/preprocessor/repetition/repeat_from_to.hpp \
	msgpack/preprocessor/repetition/enum_binary_params.hpp \
	msgpack/preprocessor/repetition/deduce_z.hpp \
	msgpack/preprocessor/repetition/enum_shifted_params.hpp \
	msgpack/preprocessor/repetition/enum_shifted.hpp \
	msgpack/preprocessor/repetition/enum_params.hpp \
	msgpack/preprocessor/repetition/enum_trailing.hpp \
	msgpack/preprocessor/repetition/detail/msvc/for.hpp \
	msgpack/preprocessor/repetition/detail/edg/for.hpp \
	msgpack/preprocessor/repetition/detail/for.hpp \
	msgpack/preprocessor/repetition/detail/dmc/for.hpp \
	msgpack/preprocessor/repetition/repeat.hpp \
	msgpack/preprocessor/repetition/deduce_r.hpp \
	msgpack/preprocessor/repetition/for.hpp \
	msgpack/preprocessor/repetition/enum_trailing_params.hpp \
	msgpack/preprocessor/repetition/enum_shifted_binary_params.hpp \
	msgpack/preprocessor/control/expr_iif.hpp \
	msgpack/preprocessor/control/if.hpp \
	msgpack/preprocessor/control/detail/msvc/while.hpp \
	msgpack/preprocessor/control/detail/while.hpp \
	msgpack/preprocessor/control/detail/edg/while.hpp \
	msgpack/preprocessor/control/detail/dmc/while.hpp \
	msgpack/preprocessor/control/iif.hpp \
	msgpack/preprocessor/control/expr_if.hpp \
	msgpack/preprocessor/control/while.hpp \
	msgpack/preprocessor/control/deduce_d.hpp \
	msgpack/preprocessor/control.hpp \
	msgpack/preprocessor/iteration/detail/finish.hpp \
	msgpack/preprocessor/iteration/detail/bounds/lower3.hpp \
	msgpack/preprocessor/iteration/detail/bounds/upper2.hpp \
	msgpack/preprocessor/iteration/detail/bounds/lower1.hpp \
	msgpack/preprocessor/iteration/detail/bounds/upper4.hpp \
	msgpack/preprocessor/iteration/detail/bounds/lower4.hpp \
	msgpack/preprocessor/iteration/detail/bounds/lower2.hpp \
	msgpack/preprocessor/iteration/detail/bounds/lower5.hpp \
	msgpack/preprocessor/iteration/detail/bounds/upper1.hpp \
	msgpack/preprocessor/iteration/detail/bounds/upper5.hpp \
	msgpack/preprocessor/iteration/detail/bounds/upper3.hpp \
	msgpack/preprocessor/iteration/detail/start.hpp \
	msgpack/preprocessor/iteration/detail/iter/reverse1.hpp \
	msgpack/preprocessor/iteration/detail/iter/forward2.hpp \
	msgpack/preprocessor/iteration/detail/iter/forward3.hpp \
	msgpack/preprocessor/iteration/detail/iter/reverse4.hpp \
	msgpack/preprocessor/iteration/detail/iter/reverse2.hpp \
	msgpack/preprocessor/iteration/detail/iter/forward4.hpp \
	msgpack/preprocessor/iteration/detail/iter/reverse5.hpp \
	msgpack/preprocessor/iteration/detail/iter/forward5.hpp \
	msgpack/preprocessor/iteration/detail/iter/reverse3.hpp \
	msgpack/preprocessor/iteration/detail/iter/forward1.hpp \
	msgpack/preprocessor/iteration/detail/rlocal.hpp \
	msgpack/preprocessor/iteration/detail/local.hpp \
	msgpack/preprocessor/iteration/detail/self.hpp \
	msgpack/preprocessor/iteration/local.hpp \
	msgpack/preprocessor/iteration/self.hpp \
	msgpack/preprocessor/iteration/iterate.hpp \
	msgpack/preprocessor/comparison.hpp \
	msgpack/preprocessor/punctuation/comma_if.hpp \
	msgpack/preprocessor/punctuation/paren_if.hpp \
	msgpack/preprocessor/punctuation/is_begin_parens.hpp \
	msgpack/preprocessor/punctuation/comma.hpp \
	msgpack/preprocessor/punctuation/detail/is_begin_parens.hpp \
	msgpack/preprocessor/punctuation/remove_parens.hpp \
	msgpack/preprocessor/punctuation/paren.hpp \
	msgpack/preprocessor/slot/slot.hpp \
	msgpack/preprocessor/slot/detail/shared.hpp \
	msgpack/preprocessor/slot/detail/slot1.hpp \
	msgpack/preprocessor/slot/detail/slot2.hpp \
	msgpack/preprocessor/slot/detail/slot3.hpp \
	msgpack/preprocessor/slot/detail/def.hpp \
	msgpack/preprocessor/slot/detail/counter.hpp \
	msgpack/preprocessor/slot/detail/slot4.hpp \
	msgpack/preprocessor/slot/detail/slot5.hpp \
	msgpack/preprocessor/slot/counter.hpp \
	msgpack/preprocessor/enum_shifted_params.hpp \
	msgpack/preprocessor/config/config.hpp \
	msgpack/preprocessor/config/limits.hpp \
	msgpack/preprocessor/enum_shifted.hpp \
	msgpack/preprocessor/enum_params.hpp \
	msgpack/preprocessor/repeat_3rd.hpp \
	msgpack/preprocessor/comma.hpp \
	msgpack/preprocessor/seq.hpp \
	msgpack/preprocessor/inc.hpp \
	msgpack/preprocessor/debug/error.hpp \
	msgpack/preprocessor/debug/assert.hpp \
	msgpack/preprocessor/debug/line.hpp \
	msgpack/preprocessor/selection/max.hpp \
	msgpack/preprocessor/selection/min.hpp \
	msgpack/preprocessor/detail/is_nullary.hpp \
	msgpack/preprocessor/detail/check.hpp \
	msgpack/preprocessor/detail/split.hpp \
	msgpack/preprocessor/detail/null.hpp \
	msgpack/preprocessor/detail/is_unary.hpp \
	msgpack/preprocessor/detail/is_binary.hpp \
	msgpack/preprocessor/detail/dmc/auto_rec.hpp \
	msgpack/preprocessor/detail/auto_rec.hpp \
	msgpack/preprocessor/punctuation.hpp \
	msgpack/preprocessor/array/enum.hpp \
	msgpack/preprocessor/array/pop_back.hpp \
	msgpack/preprocessor/array/elem.hpp \
	msgpack/preprocessor/array/data.hpp \
	msgpack/preprocessor/array/to_tuple.hpp \
	msgpack/preprocessor/array/to_list.hpp \
	msgpack/preprocessor/array/size.hpp \
	msgpack/preprocessor/array/replace.hpp \
	msgpack/preprocessor/array/push_front.hpp \
	msgpack/preprocessor/array/detail/get_data.hpp \
	msgpack/preprocessor/array/to_seq.hpp \
	msgpack/preprocessor/array/push_back.hpp \
	msgpack/preprocessor/array/pop_front.hpp \
	msgpack/preprocessor/array/insert.hpp \
	msgpack/preprocessor/array/remove.hpp \
	msgpack/preprocessor/array/reverse.hpp \
	msgpack/preprocessor/logical.hpp \
	msgpack/preprocessor/min.hpp \
	msgpack/preprocessor/debug.hpp \
	msgpack/preprocessor/repeat.hpp \
	msgpack/preprocessor/expand.hpp \
	msgpack/preprocessor/limits.hpp \
	msgpack/preprocessor/expr_if.hpp \
	msgpack/preprocessor/iteration.hpp \
	msgpack/preprocessor/while.hpp \
	msgpack/preprocessor/repetition.hpp \
	msgpack/preprocessor/repeat_2nd.hpp \
	msgpack/preprocessor/arithmetic.hpp \
	msgpack/preprocessor/list/enum.hpp \
	msgpack/preprocessor/list/to_tuple.hpp \
	msgpack/preprocessor/list/for_each_i.hpp \
	msgpack/preprocessor/list/size.hpp \
	msgpack/preprocessor/list/to_array.hpp \
	msgpack/preprocessor/list/fold_left.hpp \
	msgpack/preprocessor/list/append.hpp \
	msgpack/preprocessor/list/detail/fold_left.hpp \
	msgpack/preprocessor/list/detail/edg/fold_left.hpp \
	msgpack/preprocessor/list/detail/edg/fold_right.hpp \
	msgpack/preprocessor/list/detail/fold_right.hpp \
	msgpack/preprocessor/list/detail/dmc/fold_left.hpp \
	msgpack/preprocessor/list/to_seq.hpp \
	msgpack/preprocessor/list/first_n.hpp \
	msgpack/preprocessor/list/for_each.hpp \
	msgpack/preprocessor/list/at.hpp \
	msgpack/preprocessor/list/fold_right.hpp \
	msgpack/preprocessor/list/for_each_product.hpp \
	msgpack/preprocessor/list/cat.hpp \
	msgpack/preprocessor/list/rest_n.hpp \
	msgpack/preprocessor/list/transform.hpp \
	msgpack/preprocessor/list/adt.hpp \
	msgpack/preprocessor/list/reverse.hpp \
	msgpack/preprocessor/list/filter.hpp \
	msgpack/preprocessor/comparison/less_equal.hpp \
	msgpack/preprocessor/comparison/less.hpp \
	msgpack/preprocessor/comparison/not_equal.hpp \
	msgpack/preprocessor/comparison/equal.hpp \
	msgpack/preprocessor/comparison/greater.hpp \
	msgpack/preprocessor/comparison/greater_equal.hpp \
	msgpack/preprocessor/repeat_from_to_3rd.hpp \
	msgpack/preprocessor/array.hpp \
	msgpack/preprocessor/variadic/elem.hpp \
	msgpack/preprocessor/variadic/to_tuple.hpp \
	msgpack/preprocessor/variadic/to_list.hpp \
	msgpack/preprocessor/variadic/size.hpp \
	msgpack/preprocessor/variadic/to_array.hpp \
	msgpack/preprocessor/variadic/detail/is_single_return.hpp \
	msgpack/preprocessor/variadic/to_seq.hpp \
	msgpack/preprocessor/cat.hpp \
	msgpack/preprocessor/for.hpp \
	msgpack/preprocessor/tuple/enum.hpp \
	msgpack/preprocessor/tuple/pop_back.hpp \
	msgpack/preprocessor/tuple/elem.hpp \
	msgpack/preprocessor/tuple/to_list.hpp \
	msgpack/preprocessor/tuple/size.hpp \
	msgpack/preprocessor/tuple/replace.hpp \
	msgpack/preprocessor/tuple/rem.hpp \
	msgpack/preprocessor/tuple/push_front.hpp \
	msgpack/preprocessor/tuple/to_array.hpp \
	msgpack/preprocessor/tuple/detail/is_single_return.hpp \
	msgpack/preprocessor/tuple/to_seq.hpp \
	msgpack/preprocessor/tuple/push_back.hpp \
	msgpack/preprocessor/tuple/pop_front.hpp \
	msgpack/preprocessor/tuple/insert.hpp \
	msgpack/preprocessor/tuple/remove.hpp \
	msgpack/preprocessor/tuple/eat.hpp \
	msgpack/preprocessor/tuple/reverse.hpp \
	msgpack/preprocessor/list.hpp \
	msgpack/preprocessor/logical/bool.hpp \
	msgpack/preprocessor/logical/or.hpp \
	msgpack/preprocessor/logical/compl.hpp \
	msgpack/preprocessor/logical/xor.hpp \
	msgpack/preprocessor/logical/bitnor.hpp \
	msgpack/preprocessor/logical/nor.hpp \
	msgpack/preprocessor/logical/not.hpp \
	msgpack/preprocessor/logical/bitor.hpp \
	msgpack/preprocessor/logical/bitxor.hpp \
	msgpack/preprocessor/logical/and.hpp \
	msgpack/preprocessor/logical/bitand.hpp \
	msgpack/preprocessor/empty.hpp \
	msgpack/preprocessor/library.hpp \
	msgpack/preprocessor/facilities/identity.hpp \
	msgpack/preprocessor/facilities/is_empty.hpp \
	msgpack/preprocessor/facilities/apply.hpp \
	msgpack/preprocessor/facilities/is_empty_variadic.hpp \
	msgpack/preprocessor/facilities/is_empty_or_1.hpp \
	msgpack/preprocessor/facilities/intercept.hpp \
	msgpack/preprocessor/facilities/detail/is_empty.hpp \
	msgpack/preprocessor/facilities/expand.hpp \
	msgpack/preprocessor/facilities/overload.hpp \
	msgpack/preprocessor/facilities/is_1.hpp \
	msgpack/preprocessor/facilities/empty.hpp \
	msgpack/preprocessor/iterate.hpp

EXTRA_DIST = Xapiand.xcodeproj/project.pbxproj

AM_LDFLAGS = $(XAPIAN_LIBS)

AM_CXXFLAGS = $(XAPIAN_CXXFLAGS)
